@@ -1,3 +1,7 @@
+2017-03-28  Karl Berry  <karl@tug.org>
+
+	* Makefile.am (xupdmap.1,xfmtutil.1): also make /tmp/*.html.
+
 2016-03-18  Karl Berry  <karl@tug.org>
 
 	* texconfig-dialog.sh (cleanup): termCtl ctl rather than reset,
